Alignment fixes

--- a/chrome/style.css
+++ b/chrome/style.css
@@ -136,7 +136,10 @@
     width: 100%;
     overflow: auto;
 }
-
+#g2tMembers, #g2tAttachments, #g2tImages {
+    max-height: 96px;
+    overflow: auto;
+}
 /* #g2tMembers {
     margin: 0;
     padding: 0;
@@ -284,11 +287,24 @@ ul#g2tPosition {
     color: red;
     background: darkgray;
 } */
+#g2tPopup .popupMsg {
+    position: relative;
+    border: 1px solid #edc967;
+    font-weight: normal;
+}
+#g2tPopup .popupMsg .hideMsg + a {
+    color: blue;
+}
 #g2tPopup .popupMsg .hideMsg {
-    /* background: #edc967;
+    background: #edc967;
     font-size: 150%;
     padding: 0 5px;
-    margin-top: -5px;
+    position: absolute;
+    right: 0;
+    border-radius: 3px;
+    color: #080808;
+    font-weight: bold;
+    /* margin-top: -5px;
     margin-right: -10px; */
 } /* hideMsg close box is smaller */
 
@@ -344,21 +360,21 @@ ul#g2tPosition {
 }
 
 #g2tPopup .popupMsg #error {
-    /* font-weight: bold; */
+    font-weight: bold;
 }
 #g2tPopup .popupMsg #error dt {
-    /* float: left;
+    float: left;
     clear: left;
     width: 110px;
     text-align: right;
-    color: red; */
+    color: red;
 }
 
 #g2tPopup .popupMsg dt {
-    /* float: left;
+    float: left;
     clear: left;
     width: 110px;
-    text-align: right; */
+    text-align: right;
 }
 
 #g2tPopup .g2tWhere {
@@ -403,6 +419,12 @@ ul#g2tPosition {
 
 /* Create a flex-box based common alignment. So that floats and its pitfalls can be avoided. */
 /* Common utility classes. */
+.make-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .make-flex,
 .g2tFormGroup,
 .g2tFormControl,
@@ -436,8 +458,7 @@ div[trelloid-member] {
 /* End of common utility classes */
 
 /* Common presets */
-#g2tPopup a,
-.popupMsg {
+#g2tPopup a:not(.hideMsg + a) {
     font-weight: bold;
 }
 
@@ -538,9 +559,10 @@ div[trelloid-member] img {
     height: 30px;
     width: 30px;
 }
-.header #close-button:hover {
-    color: #d43030;
-    background: #afafaf;
+.header #close-button:hover,
+.hideMsg:hover {
+    color: #d43030 !important;
+    background: #afafaf !important;
 }
 #g2tPopup .placeholder-label,
 #g2tPopup .popupMsg {
@@ -578,7 +600,7 @@ div[trelloid-member] img {
     font-size: 0.875rem;
 }
 .g2tFormGroup .g2tFormControl {
-    width: 90%;
+    width: 100%;
     height: 100%;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -646,7 +668,10 @@ div[trelloid-member] img {
 .imgOrAttach .img-container,
 .imgOrAttach .img-container img {
     width: 30px;
-    max-width: -webkit-fill-available;
+    max-width: -webkit-fill-available !important;
+}
+.imgOrAttach .img-container img {
+    margin: 0px;
 }
 
 #g2tAttachments .imgOrAttach label {
@@ -689,12 +714,14 @@ div[trelloid-member] img {
     width: 100%;
 }
 .g2tFormControl input[type="date"],
-.g2tFormControl input[type="time"] {
+.g2tFormControl input[type="time"],
+.g2tFormControl select {
     margin: 2px 4px 2px 0;
 }
 .g2tFormControl textarea {
-    padding-top: 2px;
-    height: calc(100% - 6px);
+    padding-top: 4px;
+    margin: 0px;
+    height: calc(100% - 11px);
     resize: none;
 }
 
@@ -735,6 +762,9 @@ div[trelloid-member] img {
 .body-row {
     flex-grow: 2;
     margin-bottom: 0px;
+}
+.body-row label {
+    padding-top: 4px;
 }
 
 /* End of Updatd styles . KS */
